--- a/index.html
+++ b/index.html
@@ -5,9 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./styles.css">
+    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js" type="text/javascript"></script>
     <title>Document</title>
 </head>
 <body>
-    
+    <header id="header">
+        <img src="https://www.google.com/imgres?imgurl=https%3A%2F%2Fwww.freelogodesign.org%2Fimg%2Flogo-ex-4.png&imgrefurl=https%3A%2F%2Fwww.freelogodesign.org%2F&docid=1FqkMM1hJtCa2M&tbnid=qqZpsjwvVCuqEM%3A&vet=10ahUKEwi7qt7GnNDbAhVDWqwKHVR2AFYQMwjdASgAMAA..i&w=300&h=300&bih=809&biw=719&q=company%20logo&ved=0ahUKEwi7qt7GnNDbAhVDWqwKHVR2AFYQMwjdASgAMAA&iact=mrc&uact=8" alt="header-img" id="header-img">
+        <nav id="nav-bar">
+            <a href="#video" class="nav-link"></a>
+            <a href="#form" class="nav-link"></a>
+            <a href="#footer" class="nav-link"></a>
+        </nav>
+    </header>
+    <main>
+        <iframe id="video" width="560" height="315" src="https://www.youtube.com/embed/Ey01ZlAoYes" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+        <form method="get" action="https://www.freecodecamp.com/email-submit" id="form">
+            <input type="email" id="email" name="email" placeholder="Enter your email address">
+            <input type="submit" id="submit">
+        </form>
+    </main>
+    <footer id="footer"></footer>
 </body>
 </html>
