--- a/index.html
+++ b/index.html
@@ -6,20 +6,65 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./styles.css">
     <link rel="stylesheet" href="media_queries.css">
+    <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js" type="text/javascript"></script>
-    <title>Document</title>
+    <title>The Game Shop</title>
 </head>
 <body>
     <header id="header">
-        <img src="https://www.google.com/imgres?imgurl=https%3A%2F%2Fwww.freelogodesign.org%2Fimg%2Flogo-ex-4.png&imgrefurl=https%3A%2F%2Fwww.freelogodesign.org%2F&docid=1FqkMM1hJtCa2M&tbnid=qqZpsjwvVCuqEM%3A&vet=10ahUKEwi7qt7GnNDbAhVDWqwKHVR2AFYQMwjdASgAMAA..i&w=300&h=300&bih=809&biw=719&q=company%20logo&ved=0ahUKEwi7qt7GnNDbAhVDWqwKHVR2AFYQMwjdASgAMAA&iact=mrc&uact=8" alt="header-img" id="header-img">
+        <img src="https://dcassetcdn.com/design_img/199577/124397/124397_2295572_199577_image.jpg" alt="header-img" id="header-img">
         <nav id="nav-bar">
-            <a href="#video" class="nav-link"></a>
-            <a href="#form" class="nav-link"></a>
-            <a href="#footer" class="nav-link"></a>
+            <a href="#services" class="nav-link">Services</a>            
+            <a href="#new-games" class="nav-link">New Games</a>
+            <a href="#footer" class="nav-link">Pricing</a>
         </nav>
     </header>
+    <div id="spacer"></div>
     <main>
-        <iframe id="video" width="560" height="315" src="https://www.youtube.com/embed/Ey01ZlAoYes" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+        <div id="services">
+            <h2>Services</h2>
+            <ul>
+                <li>Need your games on disk?<br> We do that.</li>
+                <li>Want to digitally download your games?<br> We have that.</li>
+                <li>Can't wait to get your hands on the new releases?<br> We got 'em.</li>
+            </ul>
+        </div>
+
+        <div id="new-games">
+            <h2>New Games</h2>
+            <br>
+            <div class="video-container">
+                <iframe id="video" width="560" height="315" src="https://www.youtube.com/embed/nzssKfL9bik" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>                 
+            </div>
+        </div>
+
+        <div id="pricing">
+            <h2>Pricing</h2>
+            <fieldset>
+                <legend>Monthly Membership</legend>
+                <strong>$15</strong>
+                <h4>What you get: </h4>
+                <ul>
+                    <li>Free game disk rentals (max 2 per month)</li>
+                    <li>1 Free digital downlaod per month</li>
+                    <li>Free demos of new releases</li>
+                </ul>
+            </fieldset>
+            <fieldset>
+                <legend>Yearly Membership</legend>
+                <strong>$100</strong>
+                <h4>What you get: </h4>
+                <ul>
+                    <li>Free game disk rentals (max 2 per month)</li>
+                    <li>2 Free digital downlaods per month</li>
+                    <li>Free demos of new releases</li>
+                    <li>Discounts on new releases</li>
+                    <li>Discounts on new consoles</li>
+                </ul>
+            </fieldset>
+        </div>
+
+        <h2>Interested? Hit Us Up</h2>
         <form method="get" action="https://www.freecodecamp.com/email-submit" id="form">
             <input type="email" id="email" name="email" placeholder="Enter your email address">
             <input type="submit" id="submit">
