changed background images for sections

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
         <div id="pricing">
             <h2>Pricing</h2>
-            <fieldset>
+            <fieldset class="monthly">
                 <legend>Monthly Membership</legend>
                 <strong>$15</strong>
                 <h4>What you get: </h4>
@@ -55,7 +55,7 @@
                 </ul>
                 <button class="myButton">Select</button>
             </fieldset>
-            <fieldset>
+            <fieldset class="yearly">
                 <legend>Yearly Membership</legend>
                 <strong>$100</strong>
                 <h4>What you get: </h4>
@@ -72,7 +72,7 @@
 
         <h2>Interested? Hit Us Up</h2>
         <form method="get" action="https://www.freecodecamp.com/email-submit" id="form">
-            <input type="email" id="email" name="email" placeholder="Enter your email address">
+            <input type="email" id="email" name="email" placeholder="Enter your email">
             <input type="submit" id="submit" class="myButton">
         </form>
     </main>
