fixed header img and nav-bar alignment when scrolling

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     <li>1 Free digital downlaod per month</li>
                     <li>Free demos of new releases</li>
                 </ul>
-                <button class="myButton">Select</button>
+                <button>Purchase</button>
             </fieldset>
             <fieldset class="yearly">
                 <legend>Yearly Membership</legend>
@@ -68,14 +68,14 @@
                     <li>Discounts on new releases</li>
                     <li>Discounts on new consoles</li>
                 </ul>
-                <button class="myButton">Select</button>
+                <button>Purchase</button>
             </fieldset>
         </div>
 
         <h2>Interested? Hit Us Up</h2>
         <form method="get" action="https://www.freecodecamp.com/email-submit" id="form">
             <input type="email" id="email" name="email" placeholder="Enter your email">
-            <input type="submit" id="submit" class="myButton">
+            <input type="submit" id="submit" class="submit">
         </form>
     </main>
     <footer id="footer"></footer>
