adjusted some fonts and header

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </ul>
         </div>
 
-        <h2>New Games</h2>        
+        <h2 class="new-games-title">New Games</h2>        
         <div id="new-games">
 
             <br>
@@ -47,23 +47,19 @@
         <div id="pricing">
             <h2>Pricing</h2>
             <fieldset class="monthly">
-                <legend>Monthly Membership</legend>
-                <strong>$15</strong>
-                <h4>What you get: </h4>
+                <legend>Monthly Membership - $15</legend>
                 <ul>
                     <li>Free game disk rentals (max 2 per month)</li>
-                    <li>1 Free digital downlaod per month</li>
+                    <li>1 Free digital download per month</li>
                     <li>Free demos of new releases</li>
                 </ul>
                 <button>Purchase</button>
             </fieldset>
             <fieldset class="yearly">
-                <legend>Yearly Membership</legend>
-                <strong>$100</strong>
-                <h4>What you get: </h4>
+                <legend>Annual Membership - $100</legend>
                 <ul>
                     <li>Free game disk rentals (max 2 per month)</li>
-                    <li>2 Free digital downlaods per month</li>
+                    <li>2 Free digital downloads per month</li>
                     <li>Free demos of new releases</li>
                     <li>Discounts on new releases</li>
                     <li>Discounts on new consoles</li>
